fixed the alignment

--- a/assign3/part2/style.css
+++ b/assign3/part2/style.css
@@ -4,11 +4,14 @@ html {
 
 /* Your CSS below here */
 
-div {
+.box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
   width: 200px;
   height: 200px;
-  text-align: center;
-  vertical-align: middle;
-
+  background-color: red;
   border: 1px solid black;
+
 }
